Se ajustan formatos para que corran tests correctamente de segunda prueba tecnica certificacion analisis de datos freecodecamp

--- a/freecodecamp/Python-Data-Analysis-Certification/boilerplate-demographic-data-analyzer-main/Test_exercise.ipynb
+++ b/freecodecamp/Python-Data-Analysis-Certification/boilerplate-demographic-data-analyzer-main/Test_exercise.ipynb
@@ -5,7 +5,22 @@
    "execution_count": 1,
    "id": "ddc214f7-73be-4ff3-8a95-c839e60fd3a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ph/5sq6jlj161g1_2t838crnx6c0000gp/T/ipykernel_757/4080736814.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -184,82 +199,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "4f60a7a8-4854-4ed1-a9f2-376254828c4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "race\n",
-       "White                 27816\n",
-       "Black                  3124\n",
-       "Asian-Pac-Islander     1039\n",
-       "Amer-Indian-Eskimo      311\n",
-       "Other                   271\n",
-       "Name: count, dtype: int64"
+       "[27816, 3124, 1039, 311, 271]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# How many of each race are represented in this dataset? This should be a Pandas series with race names as the index labels.\n",
-    "race_count = df.value_counts(df[\"race\"])\n",
+    "race_count = df[\"race\"].value_counts().values.tolist()\n",
     "race_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "bbacce71-61cc-46ef-a647-f5555772ed1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39.43354749885268"
+       "39.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What is the average age of men?\n",
-    "average_age_men = df[df[\"sex\"] == \"Male\"][\"age\"].mean()\n",
+    "average_age_men = df[df[\"sex\"] == \"Male\"][\"age\"].mean().round(1)\n",
     "average_age_men"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c5c0e7ce-2d03-4c96-b597-0360f0e394a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16.44605509658794"
+       "16.4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What is the percentage of people who have a Bachelor's degree?\n",
-    "percentage_bachelors = (df[df[\"education\"] == \"Bachelors\"].shape[0] / df.shape[0]) * 100\n",
+    "percentage_bachelors = round((df[df[\"education\"] == \"Bachelors\"].shape[0] / df.shape[0]) * 100, 1)\n",
     "percentage_bachelors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "03cc15e0-584f-4237-b566-bccafae1c186",
    "metadata": {},
    "outputs": [
@@ -267,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.706059396210192\n",
-      "13.374896348392248\n"
+      "46.5\n",
+      "17.4\n"
      ]
     }
    ],
@@ -276,11 +285,11 @@
     " # What percentage of people with advanced education (`Bachelors`, `Masters`, or `Doctorate`) make more than 50K?\n",
     "# What percentage of people without advanced education make more than 50K?\n",
     "# with and without `Bachelors`, `Masters`, or `Doctorate`\n",
-    "higher_education = df[\"education\"].isin(['Bachelors', 'Masters', 'Doctorate'])\n",
-    "lower_education = ~df[\"education\"].isin(['Bachelors', 'Masters', 'Doctorate'])\n",
+    "higher_education = df[df[\"education\"].isin(['Bachelors', 'Masters', 'Doctorate'])]\n",
+    "lower_education = df[~df[\"education\"].isin(['Bachelors', 'Masters', 'Doctorate'])]\n",
     "\n",
-    "higher_education_rich = ( df[(higher_education) & (df[\"salary\"] == \">50K\")].shape[0] / df.shape[0] ) * 100\n",
-    "lower_education_rich = ( df[(lower_education) & (df[\"salary\"] == \">50K\")].shape[0] / df.shape[0] ) * 100\n",
+    "higher_education_rich = round((higher_education[higher_education[\"salary\"] == \">50K\"].shape[0] / higher_education.shape[0]) * 100, 1)\n",
+    "lower_education_rich = round((lower_education[lower_education[\"salary\"] == \">50K\"].shape[0] / lower_education.shape[0]) * 100, 1)\n",
     "\n",
     "print(higher_education_rich)\n",
     "print(lower_education_rich)"
@@ -288,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "404319e0-afea-48ca-bee9-c14cf3b49f8d",
    "metadata": {},
    "outputs": [
@@ -298,7 +307,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,25 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "5f38fd15-8133-4bff-9ea7-694180b3c640",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/f_/3h5g_rx13336x99h7_n9bc9c0000gp/T/ipykernel_3039/2743000245.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  rich_percentage = ( num_min_workers[df[\"salary\"] == \">50K\"].shape[0] / df.shape[0] ) * 100\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.006142317496391388"
+       "10"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,14 +338,14 @@
    "source": [
     "# What percentage of the people who work the minimum number of hours per week have a salary of >50K?\n",
     "num_min_workers = df[df[\"hours-per-week\"] == min_work_hours]\n",
-    "rich_percentage = ( num_min_workers[df[\"salary\"] == \">50K\"].shape[0] / df.shape[0] ) * 100\n",
+    "rich_percentage = int((num_min_workers[num_min_workers[\"salary\"] == \">50K\"].shape[0] / num_min_workers.shape[0]) * 100)\n",
     "\n",
     "rich_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "81939060-c633-4436-8e98-6211e28d03e2",
    "metadata": {},
    "outputs": [
@@ -353,7 +354,7 @@
      "output_type": "stream",
      "text": [
       "Iran\n",
-      "41.86046511627907\n"
+      "41.9\n"
      ]
     }
    ],
@@ -372,7 +373,7 @@
     "gc['percentage_earning_above_50K'] = (gc['>50K'] / gc['total']) * 100\n",
     "\n",
     "highest_earning_country = gc[gc['percentage_earning_above_50K'] == gc['percentage_earning_above_50K'].max()].index.tolist()[0]\n",
-    "highest_earning_country_percentage = gc['percentage_earning_above_50K'].max()\n",
+    "highest_earning_country_percentage = gc['percentage_earning_above_50K'].max().round(1)\n",
     "\n",
     "print(highest_earning_country)\n",
     "print(highest_earning_country_percentage)"
@@ -380,18 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "a2fdf04a-812c-4ad2-a145-9ac0436dff04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3    Prof-specialty\n",
-       "Name: occupation, dtype: object"
+       "'Prof-specialty'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
     "filtered = df[(df[\"native-country\"] == \"India\") & (df[\"salary\"] == \">50K\")]\n",
     "occupations_IN = filtered.groupby([\"occupation\"]).size().reset_index(name='count')\n",
     "max_IN_occupation = occupations_IN[\"count\"].max()\n",
-    "top_IN_occupation = occupations_IN[occupations_IN[\"count\"] == max_IN_occupation][\"occupation\"]\n",
+    "top_IN_occupation = occupations_IN[occupations_IN[\"count\"] == max_IN_occupation].iloc[0][\"occupation\"]\n",
     "\n",
     "top_IN_occupation"
    ]
