Prueba con exportacion e importacion de modelo de clasificacion para aplicacion springboot

--- a/otros/machine-learning/siddhardhan/projects/17_spam_mail_prediction/17_spam_mail_prediction.ipynb
+++ b/otros/machine-learning/siddhardhan/projects/17_spam_mail_prediction/17_spam_mail_prediction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "911f3761-98b6-40ce-b14b-3d27c4955bf7",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9a0a093b-4a66-4689-ad2a-c31c32dc2f25",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "4      ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "505510cd-fbbb-40ac-9784-79d331fe37cc",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "56947f5d-f49d-4519-9e75-24bce62d71ef",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "235d8d1a-3144-4e26-824b-8ed55efd48f2",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "4      ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "b131d160-3961-4bf7-be1c-9bd4dd5b8150",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "(5572, 2)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,10 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "92dfec0d-436b-49cd-b021-82e85c4acd2f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ph/5sq6jlj161g1_2t838crnx6c0000gp/T/ipykernel_2790/3673332426.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  mail_data[\"Category\"] = mail_data[\"Category\"].replace({\"ham\": 1, \"spam\": 0}).astype(int)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -371,7 +379,7 @@
        "4         1  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "38a05ca4-996a-425e-bccb-b7c7f6b63f7a",
    "metadata": {},
    "outputs": [],
@@ -397,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "2e10448c-f0c7-46c1-9df0-d4639f56bcd8",
    "metadata": {},
    "outputs": [
@@ -412,7 +420,7 @@
        "Name: Message, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "58062e85-d14d-4a4a-b656-46bd410c35c4",
    "metadata": {},
    "outputs": [
@@ -438,7 +446,7 @@
        "Name: Category, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "56a490e1-b11d-4b36-9628-f8f254c831c2",
    "metadata": {},
    "outputs": [],
@@ -485,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "f42f866e-e129-4ddd-a9c3-7af87feb09ed",
    "metadata": {},
    "outputs": [
@@ -598,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "9d6d63c4-8555-4595-ac5c-c8f3ffab357c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# transform the text data to feature vectors and numerical values which can be used as input\n",
     "# to Logistic Regression model\n",
-    "feature_extraction = TfidfVectorizer(min_df=1, stop_words='english', lowercase=True)\n",
+    "feature_extraction = TfidfVectorizer(min_df=1, stop_words='english', lowercase=True, norm=None)\n",
     "\n",
     "X_train_features = feature_extraction.fit_transform(X_train)\n",
     "X_test_features = feature_extraction.transform(X_test)\n",
@@ -616,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "59b22ce5-ed5d-4a65-affc-58b64c877bc5",
    "metadata": {},
    "outputs": [
@@ -636,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "dc54dd2c-1c43-4091-99b8-2918820e3051",
    "metadata": {},
    "outputs": [
@@ -660,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "fe2bff77-b0fe-42b2-8a73-2775b7c3adaf",
    "metadata": {},
    "outputs": [
@@ -668,57 +676,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 2329)\t0.38783870336935383\n",
-      "  (0, 3811)\t0.34780165336891333\n",
-      "  (0, 2224)\t0.413103377943378\n",
-      "  (0, 4456)\t0.4168658090846482\n",
-      "  (0, 5413)\t0.6198254967574347\n",
-      "  (1, 3811)\t0.17419952275504033\n",
-      "  (1, 3046)\t0.2503712792613518\n",
-      "  (1, 1991)\t0.33036995955537024\n",
-      "  (1, 2956)\t0.33036995955537024\n",
-      "  (1, 2758)\t0.3226407885943799\n",
-      "  (1, 1839)\t0.2784903590561455\n",
-      "  (1, 918)\t0.22871581159877646\n",
-      "  (1, 2746)\t0.3398297002864083\n",
-      "  (1, 2957)\t0.3398297002864083\n",
-      "  (1, 3325)\t0.31610586766078863\n",
-      "  (1, 3185)\t0.29694482957694585\n",
-      "  (1, 4080)\t0.18880584110891163\n",
-      "  (2, 6601)\t0.6056811524587518\n",
-      "  (2, 2404)\t0.45287711070606745\n",
-      "  (2, 3156)\t0.4107239318312698\n",
-      "  (2, 407)\t0.509272536051008\n",
-      "  (3, 7414)\t0.8100020912469564\n",
-      "  (3, 2870)\t0.5864269879324768\n",
-      "  (4, 2870)\t0.41872147309323743\n",
-      "  (4, 487)\t0.2899118421746198\n",
+      "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+      "\twith 34775 stored elements and shape (4457, 7431)>\n",
+      "  Coords\tValues\n",
+      "  (0, 2329)\t4.5821739483407775\n",
+      "  (0, 3811)\t4.109150689221321\n",
+      "  (0, 2224)\t4.880666936896774\n",
+      "  (0, 4456)\t4.925118699467608\n",
+      "  (0, 5413)\t7.323013972265978\n",
+      "  (1, 3811)\t4.109150689221321\n",
+      "  (1, 3046)\t5.905947952479334\n",
+      "  (1, 1991)\t7.793017601511714\n",
+      "  (1, 2956)\t7.793017601511714\n",
+      "  (1, 2758)\t7.610696044717759\n",
+      "  (1, 1839)\t6.569242169889598\n",
+      "  (1, 918)\t5.395122328713343\n",
+      "  (1, 2746)\t8.016161152825923\n",
+      "  (1, 2957)\t8.016161152825923\n",
+      "  (1, 3325)\t7.456545364890501\n",
+      "  (1, 3185)\t7.004560241147444\n",
+      "  (1, 4080)\t4.453695623567645\n",
+      "  (2, 6601)\t8.70930833338587\n",
+      "  (2, 2404)\t6.512083756049649\n",
+      "  (2, 3156)\t5.905947952479334\n",
+      "  (2, 407)\t7.323013972265978\n",
+      "  (3, 7414)\t5.79153760130159\n",
+      "  (3, 2870)\t4.192969361104393\n",
+      "  (4, 2870)\t12.57890808331318\n",
+      "  (4, 487)\t8.70930833338587\n",
       "  :\t:\n",
-      "  (4454, 2855)\t0.47210665083641806\n",
-      "  (4454, 2246)\t0.47210665083641806\n",
-      "  (4455, 4456)\t0.24920025316220423\n",
-      "  (4455, 3922)\t0.31287563163368587\n",
-      "  (4455, 6916)\t0.19636985317119715\n",
-      "  (4455, 4715)\t0.30714144758811196\n",
-      "  (4455, 3872)\t0.3108911491788658\n",
-      "  (4455, 7113)\t0.30536590342067704\n",
-      "  (4455, 6091)\t0.23103841516927642\n",
-      "  (4455, 6810)\t0.29731757715898277\n",
-      "  (4455, 5646)\t0.33545678464631296\n",
-      "  (4455, 2469)\t0.35441545511837946\n",
-      "  (4455, 2247)\t0.37052851863170466\n",
-      "  (4456, 2870)\t0.31523196273113385\n",
-      "  (4456, 5778)\t0.16243064490100795\n",
-      "  (4456, 334)\t0.2220077711654938\n",
-      "  (4456, 6307)\t0.2752760476857975\n",
-      "  (4456, 6249)\t0.17573831794959716\n",
-      "  (4456, 7150)\t0.3677554681447669\n",
-      "  (4456, 7154)\t0.24083218452280053\n",
-      "  (4456, 6028)\t0.21034888000987115\n",
-      "  (4456, 5569)\t0.4619395404299172\n",
-      "  (4456, 6311)\t0.30133182431707617\n",
-      "  (4456, 647)\t0.30133182431707617\n",
-      "  (4456, 141)\t0.292943737785358\n"
+      "  (4454, 2855)\t8.70930833338587\n",
+      "  (4454, 2246)\t8.70930833338587\n",
+      "  (4455, 4456)\t4.925118699467608\n",
+      "  (4455, 3922)\t6.183579689077614\n",
+      "  (4455, 6916)\t3.8809945960835677\n",
+      "  (4455, 4715)\t6.07025100377061\n",
+      "  (4455, 3872)\t6.144358975924332\n",
+      "  (4455, 7113)\t6.03515968395934\n",
+      "  (4455, 6091)\t4.566173606994337\n",
+      "  (4455, 6810)\t5.876094989329653\n",
+      "  (4455, 5646)\t6.629866791706033\n",
+      "  (4455, 2469)\t7.004560241147444\n",
+      "  (4455, 2247)\t7.323013972265978\n",
+      "  (4456, 2870)\t8.385938722208786\n",
+      "  (4456, 5778)\t4.321051148961351\n",
+      "  (4456, 334)\t5.905947952479334\n",
+      "  (4456, 6307)\t7.323013972265978\n",
+      "  (4456, 6249)\t4.675067695233474\n",
+      "  (4456, 7150)\t9.783192014857928\n",
+      "  (4456, 7154)\t6.406723240391823\n",
+      "  (4456, 6028)\t5.595793024175494\n",
+      "  (4456, 5569)\t12.288717951848664\n",
+      "  (4456, 6311)\t8.016161152825923\n",
+      "  (4456, 647)\t8.016161152825923\n",
+      "  (4456, 141)\t7.793017601511714\n"
      ]
     }
    ],
@@ -736,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "099b2eaa-11e5-4ec2-8484-44680a008d15",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1164,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "1c2f164a-9900-4277-b626-dc653191f8e0",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9676912721561588\n"
+      "1.0\n"
      ]
     }
    ],
@@ -1193,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "e557129f-4b0f-4586-a362-3fb4bf7e1810",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9668161434977578\n"
+      "0.9757847533632287\n"
      ]
     }
    ],
@@ -1221,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "7c82c0c8-2aa4-4192-ad65-22269c3a97f0",
    "metadata": {},
    "outputs": [
@@ -1229,13 +1240,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 0]\n"
+      "[1 0 1 0]\n"
      ]
     }
    ],
    "source": [
     "input_mail = [\"I've been searching for the right words to thank you for this breather. I promise i wont take your help for granted and will fulfil my promise. You have been wonderful and a blessing at all times.\",\n",
     "              \"You have won a 1 week FREE membership in our £100,000 Prize Jackpot! Txt the word: CLAIM to No: 81010 T&C www.dbuk.net\",\n",
+    "              \"Your account has benn hacked. Give us your password to recover access\",\n",
     "              \"Dear User, Congratulations! You've been selected to receive a $1,000 Gift Card as part of our exclusive giveaway. To claim your reward, simply click the link below and complete the quick verification process: Claim Your Gift Card Now Hurry, this offer is valid for the next 24 hours only! Best regards, The Rewards Team\"]\n",
     "\n",
     "# convert text to feature vector with numerical values\n",
@@ -1249,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "4d0595a2-61ea-4e6a-ac91-063cac9f4100",
    "metadata": {},
    "outputs": [
@@ -1272,9 +1284,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f333064-5983-4321-8c4d-e8adc0348ee8",
+   "metadata": {},
+   "source": [
+    "## Exporting Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a22c516f-9b1f-4885-95ae-d16abd94051e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo exportado como email_classifier.pmml\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn2pmml import PMMLPipeline\n",
+    "from sklearn2pmml import sklearn2pmml\n",
+    "\n",
+    "# Crear un pipeline con el vectorizador y el modelo\n",
+    "pipeline = PMMLPipeline([\n",
+    "    (\"tfidf\", feature_extraction),  # Vectorizador que ya definiste\n",
+    "    (\"classifier\", model)          # Modelo que ya entrenaste\n",
+    "])\n",
+    "\n",
+    "# Exportar el modelo a PMML\n",
+    "sklearn2pmml(pipeline, \"email_classifier.pmml\", with_repr=True)\n",
+    "print(\"Modelo exportado como email_classifier.pmml\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3be3da05-f113-4d8a-9dc1-b18b681f45e2",
+   "id": "d0aa51d2-32bd-45b9-84f1-f17edb23edc5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1296,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
